# termometro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/termometro/: __init__.py  cli.py  scorer.py
tests/: test_scorer.py
web/: README.md  index.html  knip.json  oxfmt.toml  oxlint.config.json  package.json  react-doctor.config.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  entry.tsx  scorer.ts  styles.css
web/src/components/: Background.tsx  Header.tsx  OptionsBar.tsx  ScoreBoard.tsx  ScoreInput.tsx  Tile.tsx
web/tests/: app.test.tsx  scorer.test.ts
